--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<h1>Lorem</h1>
-	<div>Lorem ipsum dolor sit amet.</div>
-	<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, consectetur.</span>
+	<div class="line">Lorem ipsum dolor sit amet.</div>
+	<span class="red">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, consectetur.</span>
 </body>
 </html>
